data/derived/comb/progs/unify/prog4019.ml.out
Characters 120-121:
  and z = x mod 10 in 
          ^
Error: This expression has type string but an expression was expected of type
         int
